--- a/precourse/index.html
+++ b/precourse/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple.com Website</title>
-  </head>
+    <link rel="stylesheet" type="text/css" href="./style.css">
   <body>
     <div id="page-wrapper">
       <header id="header">
         <div class="container">
           <nav id="nav-bar">
+            <!-- 记得添加相关说明内容，方便disable people -->
             <ul>
               <li>
                 <img
@@ -20,55 +21,55 @@
               <li>
                 <img
                   class="nav-link"
-                  src="./source_code/images/navbar/apple-icon.png"
+                  src="./source_code/images/navbar/mac.png"
                 />
               </li>
               <li>
                 <img
                   class="nav-link"
-                  src="./source_code/images/navbar/apple-icon.png"
+                  src="./source_code/images/navbar/ipad.png"
                 />
               </li>
               <li>
                 <img
                   class="nav-link"
-                  src="./source_code/images/navbar/apple-icon.png"
+                  src="./source_code/images/navbar/iphone.png"
                 />
               </li>
               <li>
                 <img
                   class="nav-link"
-                  src="./source_code/images/navbar/apple-icon.png"
+                  src="./source_code/images/navbar/watch.png"
                 />
               </li>
               <li>
                 <img
                   class="nav-link"
-                  src="./source_code/images/navbar/apple-icon.png"
+                  src="./source_code/images/navbar/tv.png"
                 />
               </li>
               <li>
                 <img
                   class="nav-link"
-                  src="./source_code/images/navbar/apple-icon.png"
+                  src="./source_code/images/navbar/music.png"
                 />
               </li>
               <li>
                 <img
                   class="nav-link"
-                  src="./source_code/images/navbar/apple-icon.png"
+                  src="./source_code/images/navbar/support.png"
                 />
               </li>
               <li>
                 <img
                   class="nav-link"
-                  src="./source_code/images/navbar/apple-icon.png"
+                  src="./source_code/images/navbar/search.png"
                 />
               </li>
               <li>
                 <img
                   class="nav-link"
-                  src="./source_code/images/navbar/apple-icon.png"
+                  src="./source_code/images/navbar/shop.png"
                 />
               </li>
             </ul>
