--- a/precourse/index.html
+++ b/precourse/index.html
@@ -10,84 +10,214 @@
       <header id="header">
         <div class="container">
           <nav id="nav-bar">
-            <!-- 记得添加相关说明内容，方便disable people -->
+            <!-- 记得添加相关说明内容，方便disabled people -->
             <ul>
               <li>
+                <a href="#">
                 <img
                   class="nav-link"
                   src="./source_code/images/navbar/apple-icon.png"
                 />
+                </a>
               </li>
               <li>
+                <a href="#">
                 <img
                   class="nav-link"
                   src="./source_code/images/navbar/mac.png"
                 />
+                </a>
               </li>
               <li>
+                <a href="#">
                 <img
                   class="nav-link"
                   src="./source_code/images/navbar/ipad.png"
                 />
+                </a>
               </li>
               <li>
+                <a href="#">
                 <img
                   class="nav-link"
                   src="./source_code/images/navbar/iphone.png"
                 />
+                </a>
               </li>
               <li>
+                <a href="#">
                 <img
                   class="nav-link"
                   src="./source_code/images/navbar/watch.png"
                 />
+                </a>
               </li>
               <li>
+                <a href="#">
                 <img
                   class="nav-link"
                   src="./source_code/images/navbar/tv.png"
                 />
+                </a>
               </li>
               <li>
+                <a href="#">
                 <img
                   class="nav-link"
                   src="./source_code/images/navbar/music.png"
                 />
+                </a>
               </li>
               <li>
+                <a href="#">
                 <img
                   class="nav-link"
                   src="./source_code/images/navbar/support.png"
                 />
+                </a>
               </li>
               <li>
+                <a href="#">
                 <img
                   class="nav-link"
                   src="./source_code/images/navbar/search.png"
                 />
+                </a>
               </li>
               <li>
+                <a href="#">
                 <img
                   class="nav-link"
                   src="./source_code/images/navbar/shop.png"
                 />
+                </a>
               </li>
             </ul>
           </nav>
         </div>
       </header>
-    </div>
+      <div id="hero">
+      <div id="hero-left-contain">
+        <img src="./source_code/images/iphone-6s-change_large.jpg">
+      </div>
+      <div id="hero-right-contain">
+        <div id="top-header">
+          <img src="./source_code/images/iphone_6s_large.png">
+          <h2>The only thing that’s changed is everything.</h2>
+          <ul>
+            <li><a href="#">Learn more ></a></li>
+            <li><a href="#">Watch the film</a></li>
+          </ul>
+        </div>
+      </div>
+      </div>
+      <div id="sub-hero">
+        <div id="sub-hero-section">
+          <div class="col-3 sub-hero-img" id="hero-sub-watch">
+          </div>
+          <div class="col-3 sub-hero-img" id="hero-sub-ipad">
+          </div>
+          <div class="col-3 sub-hero-img" id="hero-sub-access">
+          </div>
+          <div class="col-3 sub-hero-img" id="hero-sub-macbook">
+          </div>
+        </div>
+        <p><a href="#">AC Wall Plug Adapter Recall Program ></a></p>
+      </div>
+      <footer>
+        <div class="footer-container">
+        <div class="footer-nav">
+          <div class="col-2">
+            <ul>
+              <li>Shop and Learn</li>
+              <li><a href="#">Mac</a></li>
+              <li><a href="#">iPad</a></li>
+              <li><a href="#">iPhone</a></li>
+              <li><a href="#">Watch</a></li>
+              <li><a href="#">TV</a></li>
+              <li><a href="#">Music</a></li>
+              <li><a href="#">iTunes</a></li>
+              <li><a href="#">iPod</a></li>
+              <li><a href="#">Acceessories</a></li>
+              <li><a href="#">Gift Card</a></li>
+            </ul>
+          </div><div class="col-2">
+            <ul>
+              <li>Apple Store</li>
+              <li><a href="#">Find a Store</a></li>
+              <li><a href="#">Genius Bar</a></li>
+              <li><a href="#">Workshops and Learning</a></li>
+              <li><a href="#">Youth Programs</a></li>
+              <li><a href="#">Apple Store App</a></li>
+              <li><a href="#">Refurbished</a></li>
+              <li><a href="#">Financing</a></li>
+              <li><a href="#">Reuse and Recycling</a></li>
+              <li><a href="#">Order Status</a></li>
+              <li><a href="#">Shopping Help</a></li>
+            </ul>
+          </div><div class="col-2">
+              <ul>
+                <li>For Education</li>
+                <li><a href="#">Apple and Education</a></li>
+                <li><a href="#">Shop for College</a></li>
+              </ul>
+              <ul>
+                <li>For Business</li>
+                <li><a href="#">iPhone in Business</a></li>
+                <li><a href="#">iPad in Business</a></li>
+                <li><a href="#">Mac in Business</a></li>
+                <li><a href="#">Shop for Your Business</a></li>
+              </ul>
+          </div><div class="col-2">
+            <ul>
+              <li>Account</li>
+              <li><a href="#">Manage Your Apple ID</a></li>
+              <li><a href="#">Apple Store Account</a></li>
+              <li><a href="#">iCloud.com</a></li>
+              </ul>
+              <ul>
+                <li>Apple Values</li>
+                <li><a href="#">Environment</a></li>
+                <li><a href="#">Supplier Responsibility</a></li>
+                <li><a href="#">Accessibility</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Inclusion and Diversity</a></li>
+                <li><a href="#">Education</a></li>
+                </ul>
+          </div><div class="col-2">
+            <ul>
+              <li>About Apple</li>
+              <li><a href="#">Apple Info</a></li>
+              <li><a href="#">Job Opportunities</a></li>
+              <li><a href="#">Press Info</a></li>
+              <li><a href="#">Investors</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Hot News</a></li>
+              <li><a href="#">Legal</a></li>
+              <li><a href="#">Contact Apple</a></li>
+              </ul>
+          </div>
+        </div>
+        <div class="footer-help">
+          <p>More ways to shop: Visit an <a href="#">Apple Store</a>, call 1-800-MY-APPLE, or <a href="#">find a reseller</a>.</p>
 
-    <div>
-      <!-- write your hero section here -->
-    </div>
+          
+          <div class="legal">Copyright © 2016 Apple Inc. All rights reserved.</div>
 
-    <div>
-      <!-- write your sub hero section here -->
-    </div>
+          <div class="legal-links">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Use</a>
+            <a href="#">Sales and Refunds</a>
+            <a href="#">Site Map</a>
+          </div>
 
-    <footer>
-      <!-- write your footer here -->
-    </footer>
+          <div class="locale">
+            <a href="#"><span id="locale-flag"></span></a>
+            <a href="#">United States</a>
+          </div>
+
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
