--- a/precourse/index.html
+++ b/precourse/index.html
@@ -125,7 +125,7 @@
         <p><a href="#">AC Wall Plug Adapter Recall Program ></a></p>
       </div>
       <footer>
-        <div class="footer-container">
+      <div class="footer-container">
         <div class="footer-nav">
           <div class="col-2">
             <ul>
@@ -201,7 +201,7 @@
         <div class="footer-help">
           <p>More ways to shop: Visit an <a href="#">Apple Store</a>, call 1-800-MY-APPLE, or <a href="#">find a reseller</a>.</p>
 
-          
+
           <div class="legal">Copyright © 2016 Apple Inc. All rights reserved.</div>
 
           <div class="legal-links">
@@ -217,6 +217,7 @@
           </div>
 
         </div>
+      </div>
       </footer>
     </div>
   </body>
