修改字体和间距等问题

--- a/precourse/index.html
+++ b/precourse/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple.com Website</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <script src="https://kit.fontawesome.com/00546564af.js" crossorigin="anonymous"></script>
   <body>
     <div id="page-wrapper">
       <header id="header">
@@ -101,14 +102,20 @@
         <img src="./source_code/images/iphone-6s-change_large.jpg">
       </div>
       <div id="hero-right-contain">
-        <div id="top-header">
+        <!-- <div id="top-header">
           <img src="./source_code/images/iphone_6s_large.png">
           <h2>The only thing that’s changed is everything.</h2>
           <ul>
             <li><a href="#">Learn more ></a></li>
-            <li><a href="#">Watch the film</a></li>
+            <li><a href="#">Watch the film<i class="far fa-play-circle"></i></a></li>
           </ul>
-        </div>
+        </div> -->
+        <h1 id="product-name"></h1>
+        <h2 id="product-text">The only thing that’s changed is everything.</h2>
+        <ul id="product-links">
+          <li><a href="#">Learn more ></a></li>
+          <li><a href="#">Watch the film<i class="far fa-play-circle"></i></a></li>
+        </ul>
       </div>
       </div>
       <div id="sub-hero">
