form in small screen

--- a/web-basic/airbnb/demo.html
+++ b/web-basic/airbnb/demo.html
@@ -22,17 +22,18 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-xl py-0">
+    <nav class="navbar navbar-expand-xl py-0 w-100 position-absolute">
       <!-- nav for xl screens -->
+      <!-- flex-grow-1 -->
 
-      <div class="d-none d-xl-flex" id="xlNavbar">
+      <div class="d-none d-xl-flex flex-grow-1" id="xlNavbar">
         <a class="navbar-brand" href="#">Airbnb</a>
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#">Become a host</a>
-          <a class="nav-item nav-link" href="#">Earn credit</a>
-          <a class="nav-item nav-link" href="#">Help</a>
-          <a class="nav-item nav-link" href="#">Sign up</a>
-          <a class="nav-item nav-link" href="#">Log in</a>
+          <a class="nav-item nav-link text-white" href="#">Become a host</a>
+          <a class="nav-item nav-link text-white" href="#">Earn credit</a>
+          <a class="nav-item nav-link text-white" href="#">Help</a>
+          <a class="nav-item nav-link text-white" href="#">Sign up</a>
+          <a class="nav-item nav-link text-white" href="#">Log in</a>
         </div>
       </div>
 
@@ -40,14 +41,18 @@
 
       <!-- a标签代替按钮功能展现导航 href与导航id相对应 -->
       <a
-        class="navbar-toggler navbar-brand"
+        class="navbar-toggler navbar-brand position-relative collapsed"
         role="button"
         data-toggle="collapse"
         href="#navbarMenu"
+        id="navbarMenuToggler"
         >Airbnb</a
       >
 
-      <div class="collapse navbar-collapse" id="navbarMenu">
+      <div
+        class="collapse navbar-collapse px-4 pb-4 bg-white position-absolute"
+        id="navbarMenu"
+      >
         <ul class="navbar-nav ">
           <li class="nav-item ">
             <a class="nav-link" href="#">Home</a>
@@ -87,6 +92,62 @@
       </div>
     </nav>
 
+    <div id="hero">
+      <div class="container-fluid">
+        <h2 class="pb-3 pb-sm-4 text-white">
+          Book unique homes and experiences.
+        </h2>
+      </div>
+    </div>
+
+    <div id="searchForm">
+      <div class="container-fluid">
+        <form>
+          <div class="form-group">
+            <label for="inputAddress">WHERE</label>
+            <input
+              type="text"
+              class="form-control form-control-lg rounded"
+              id="inputAddress"
+              placeholder="Anywhere"
+            />
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputEmail4">CHECK IN</label>
+              <input
+                type="date"
+                class="form-control form-control-lg rounded"
+                id="inputEmail4"
+                placeholder="mm/dd/yyyy"
+              />
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputPassword4">CHECK OUT</label>
+              <input
+                type="date"
+                class="form-control form-control-lg rounded"
+                id="inputPassword4"
+                placeholder="mm/dd/yyyy"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="inputState">GUESTS</label>
+            <select
+              id="inputState"
+              class="form-control form-control-lg rounded"
+            >
+              <option selected> 1 guest</option>
+              <option>2 guest</option>
+              <option>3 guest</option>
+            </select>
+          </div>
+          <button type="submit" class="btn btn-danger w-100">Search</button>
+        </form>
+      </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
