--- a/web-basic/airbnb/index.html
+++ b/web-basic/airbnb/index.html
@@ -48,7 +48,7 @@
       >
 
       <div
-        class="collapse navbar-collapse pt-0 px-2 pb-4 font-weight-light"
+        class="collapse navbar-collapse px-2 pb-4 font-weight-light position-absolute"
         id="navbarMenu"
       >
         <a class="nav-item nav-link" href="#">Home</a>
