second part finished

--- a/web-basic/airbnb/demo.html
+++ b/web-basic/airbnb/demo.html
@@ -22,7 +22,10 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-xl py-0 w-100 position-absolute">
+    <nav
+      class="navbar navbar-expand-xl py-0 w-100 position-absolute"
+      id="navbar"
+    >
       <!-- nav for xl screens -->
       <!-- flex-grow-1 -->
 
@@ -97,6 +100,16 @@
         <h2 class="mb-0 pb-3 pb-sm-4 text-white d-xl-none">
           Book unique homes and experiences.
         </h2>
+      </div>
+      <div
+        class="d-none d-xl-block text-right position-absolute p-4"
+        id="message"
+      >
+        <a href="#" class="text-white"
+          ><small class="font-weight-light"
+            >Over 300<br />unique homes in Oregon</small
+          ></a
+        >
       </div>
     </div>
 
