third part finished

--- a/web-basic/airbnb/demo.html
+++ b/web-basic/airbnb/demo.html
@@ -164,6 +164,123 @@
         </form>
       </div>
     </div>
+
+    <div class="container-fluid">
+      <!-- First Section -->
+      <div class="pt-3 pt-lg-4 pt-xl-5 headings headings">
+        <h4 class="mb-3">
+          What guests are saying about homes in United States
+        </h4>
+        <p>
+          &#11088;
+          <span class="d-none d-md-inline">United States homes were rated </span
+          ><b>4.8 out of 5 stars</b> with <b>25,500,000+ reviews</b>
+        </p>
+      </div>
+    </div>
+    <div class="row pt-2 flex-nowrap scrollableRow no-gutters">
+      <div class="col-12 col-md-6 col-xl-4">
+        <div class="review">
+          <div class="image mb-3">
+            <img
+              class="img-fluid w-100 rounded"
+              src="./images/outdoor1-1.jpg"
+            />
+          </div>
+          <div class="rating mb-2 text-black-50">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <p class="description pr-4">
+            <small>
+              We had a wonderful time staying in Murray & Kay's trailer. The
+              location was beautiful and the trailer was adorable. We loved
+              watching the sunset and the stars. We also had a great run in the
+              morning on the bike path. We enjoyed going to the nearby country
+              club for a
+            </small>
+          </p>
+          <div class="user d-flex flex-row">
+            <i class="far fa-user-circle mr-3"></i>
+            <div>
+              <p class="name mb-0"><b>Shelley</b></p>
+              <p class="location mb-0"><small>United States</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-xl-4">
+        <div class="review">
+          <div class="image mb-3">
+            <img
+              class="img-fluid w-100 rounded"
+              src="./images/outdoor2-2.jpg"
+            />
+          </div>
+          <div class="rating mb-2 text-black-50">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <p class="description pr-4">
+            <small>
+              Judy was very welcoming upon our arrival. We didn't get to meet
+              Tom. Judy gave us a little tour of the Silver Cloud and made some
+              excellent restaurant recommendations. The entire property is
+              absolutely charming! The Silver Cloud is a great, cozy space for
+              two people.
+            </small>
+          </p>
+          <div class="user d-flex flex-row">
+            <i class="far fa-user-circle mr-3"></i>
+            <div>
+              <p class="name mb-0"><b>Alyssa</b></p>
+              <p class="location mb-0"><small>United States</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-xl-4">
+        <div class="review">
+          <div class="image mb-3">
+            <img
+              class="img-fluid w-100 rounded"
+              src="./images/outdoor3-3.jpg"
+            />
+          </div>
+          <div class="rating mb-2 text-black-50">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <p class="description pr-4">
+            <small>
+              We had a fantastic stay at Doug and Chris' studio! It was a great
+              location and they provided us with the best route to Disneyland.
+              They were easy to communicate with and were helpful during our
+              stay. We definitely want to stay again and it is a great
+              alternative to staying at a hotel near Disneyland.
+            </small>
+          </p>
+          <div class="user d-flex flex-row">
+            <i class="far fa-user-circle mr-3"></i>
+            <div>
+              <p class="name mb-0"><b>Sarah</b></p>
+              <p class="location mb-0"><small>United States</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr class="mt-4 mt-xl-5" />
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
@@ -179,6 +296,11 @@
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/96ba351cc0.js"
       crossorigin="anonymous"
     ></script>
   </body>
