fourth part finished

--- a/web-basic/airbnb/demo.html
+++ b/web-basic/airbnb/demo.html
@@ -281,6 +281,312 @@
     </div>
 
     <hr class="mt-4 mt-xl-5" />
+
+    <!-- Value Props -->
+
+    <div class="row flex-nowrap pt-2 pt-md-3 scrollableRow no-gutters">
+      <div class="col-8 col-md-4">
+        <div class="valueProp">
+          <div class="icon mb-3">
+            <i class="far fa-heart"></i>
+          </div>
+          <p class="title mb-1">24/7 customer support</p>
+          <p class="description pr-4">
+            <small>
+              Day or night, we’re here for you. Talk to our support team from
+              anywhere in the world, any hour of day.
+            </small>
+          </p>
+        </div>
+      </div>
+      <div class="col-8 col-md-4">
+        <div class="valueProp">
+          <div class="icon mb-3">
+            <i class="fas fa-home"></i>
+          </div>
+          <p class="title mb-1">Global hospitality standards</p>
+          <p class="description pr-4">
+            <small>
+              Guests review their hosts after each stay. All hosts must maintain
+              a minimum rating and our hospitality standards to be on Airbnb.
+            </small>
+          </p>
+        </div>
+      </div>
+      <div class="col-8 col-md-4">
+        <div class="valueProp">
+          <div class="icon mb-3">
+            <i class="far fa-user"></i>
+          </div>
+          <p class="title mb-1">5-star hosts</p>
+          <p class="description pr-4">
+            <small>
+              From fresh-pressed sheets to tips on where to get the best brunch,
+              our hosts are full of local hospitality.
+            </small>
+          </p>
+        </div>
+      </div>
+
+      <!-- Filler -->
+      <div class="d-xl-none filler"></div>
+    </div>
+
+    <hr class="mt-2 mt-md-3 mb-0" />
+    <!-- Home Listings -->
+    <div class="pt-4 pt-lg-5 headings">
+      <h4 class="mb-3">Homes in United States</h4>
+    </div>
+
+    <div class="row flex-nowrap pt-2 scrollableRow no-gutters">
+      <div class="col-12 col-md-6 col-xl-3">
+        <div class="listing">
+          <img class="img-fluid w-100 rounded" src="./images/outdoor2-2.jpg" />
+
+          <!-- <div
+            class="aspectRatioBox mb-2 rounded"
+            style="background-image: url('./images/outdoor4-1.jpg')"
+          ></div> -->
+          <p class="mb-0 text-uppercase location">
+            <small>camper/rv · malibu</small>
+          </p>
+          <p class="title mb-0">Malibu Dream Airstream</p>
+          <p class="pricing mb-0">
+            <small>$600 per night · Free cancellation </small>
+          </p>
+          <div class="info d-flex align-items-center">
+            <span class="rating text-black-50">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </span>
+            <span
+              ><span class="numberOfRatings">351</span> ·
+              <span class="tag">Superhost</span></span
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-xl-3">
+        <div class="listing">
+          <img class="img-fluid w-100 rounded" src="./images/outdoor2-2.jpg" />
+
+          <!-- <div
+            class="aspectRatioBox mb-2 rounded"
+            style="background-image: url('./images/outdoor5-1.jpg')"
+          ></div> -->
+          <p class="mb-0 text-uppercase location">
+            <small>entire house · joshua tree</small>
+          </p>
+          <p class="title mb-0">The Joshua Tree House</p>
+          <p class="pricing mb-0">
+            <small>$285 per night · Free cancellation </small>
+          </p>
+          <div class="info d-flex align-items-center">
+            <span class="rating text-black-50">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </span>
+            <span
+              ><span class="numberOfRatings">348</span> ·
+              <span class="tag">Superhost</span></span
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-xl-3">
+        <div class="listing">
+          <img class="img-fluid w-100 rounded" src="./images/outdoor2-2.jpg" />
+
+          <!-- <div
+            class="aspectRatioBox mb-2 rounded"
+            style="background-image: url('./images/outdoor4-1.jpg')"
+          ></div> -->
+          <p class="mb-0 text-uppercase location">
+            <small>dome house · aptos</small>
+          </p>
+          <p class="title mb-0">
+            Mushroom Dome Cabin: #1 on airbnb in the world
+          </p>
+          <p class="pricing mb-0">
+            <small>$130 per night · Free cancellation </small>
+          </p>
+          <div class="info d-flex align-items-center">
+            <span class="rating text-black-50">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </span>
+            <span
+              ><span class="numberOfRatings">1205</span> ·
+              <span class="tag">Superhost</span></span
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-xl-3">
+        <div class="listing">
+          <img class="img-fluid w-100 rounded" src="./images/outdoor2-2.jpg" />
+
+          <!-- <div
+            class="aspectRatioBox mb-2 rounded"
+            style="
+            background-image: url('./images/outdoor4-1.jpg'); 
+            background-size: cover;
+            background-position: center bottom; "
+          ></div> -->
+          <p class="mb-0 text-uppercase location">
+            <small>entire house · cazadero</small>
+          </p>
+          <p class="title mb-0">Cozy A-Frame Cabin in the Redwoods</p>
+          <p class="pricing mb-0">
+            <small>$175 per night · Free cancellation </small>
+          </p>
+          <div class="info d-flex align-items-center">
+            <span class="rating text-black-50">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </span>
+            <span
+              ><span class="numberOfRatings">382</span> ·
+              <span class="tag">Superhost</span></span
+            >
+          </div>
+        </div>
+      </div>
+
+      <!-- Filler -->
+      <div class="d-xl-none filler"></div>
+    </div>
+
+    <div class="mt-3 d-none d-md-block">
+      <a href="#" class="listingsLink">Show all (22,000+) &gt;</a>
+    </div>
+
+    <div class="pt-4 pt-lg-5 headings">
+      <h4 class="mb-3">Top-rated experiences</h4>
+    </div>
+
+    <div class="row flex-nowrap pt-2 scrollableRow no-gutters">
+      <div class="col-8 col-md-6 col-xl-3">
+        <div class="listing">
+          <img class="img-fluid w-100 rounded" src="./images/outdoor2-2.jpg" />
+
+          <!-- <div
+            class="aspectRatioBox mb-2 rounded"
+            style="background-image: url('./images/malcolm-lightbody-698733-unsplash.jpg')"
+          ></div> -->
+          <p class="mb-0 text-uppercase location">
+            <small>workshop · seattle</small>
+          </p>
+          <p class="title mb-0">Forge a knife from a horseshoe</p>
+          <p class="pricing mb-0"><small>$95 per person</small></p>
+          <div class="info d-flex align-items-center">
+            <span class="rating text-black-50">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </span>
+            <span><span class="numberOfRatings">210</span></span>
+          </div>
+        </div>
+      </div>
+      <div class="col-8 col-md-6 col-xl-3">
+        <div class="listing">
+          <img class="img-fluid w-100 rounded" src="./images/outdoor2-2.jpg" />
+
+          <!-- <div
+            class="aspectRatioBox mb-2 rounded"
+            style="background-image: url('./images/greta-scholderle-moller-unsplash.jpg')"
+          ></div> -->
+          <p class="mb-0 text-uppercase location">
+            <small>animal encounter · seattle</small>
+          </p>
+          <p class="title mb-0">Horse Riding</p>
+          <p class="pricing mb-0"><small>$175 per person</small></p>
+          <div class="info d-flex align-items-center">
+            <span class="rating text-black-50">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </span>
+            <span><span class="numberOfRatings">1147</span></span>
+          </div>
+        </div>
+      </div>
+      <div class="col-8 col-md-6 col-xl-3">
+        <div class="listing">
+          <img class="img-fluid w-100 rounded" src="./images/outdoor2-2.jpg" />
+
+          <!-- <div
+            class="aspectRatioBox mb-2 rounded"
+            style="background-image: url('./images/phad-pichetbovornkul-unsplash.jpg')"
+          ></div> -->
+          <p class="mb-0 text-uppercase location">
+            <small>day trip · san diego</small>
+          </p>
+          <p class="title mb-0">Day Trip Across the Border</p>
+          <p class="pricing mb-0"><small>$75 per person</small></p>
+          <div class="info d-flex align-items-center">
+            <span class="rating text-black-50">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </span>
+            <span><span class="numberOfRatings">93</span></span>
+          </div>
+        </div>
+      </div>
+      <div class="col-8 col-md-6 col-xl-3">
+        <div class="listing">
+          <img class="img-fluid w-100 rounded" src="./images/outdoor2-2.jpg" />
+
+          <!-- <div
+            class="aspectRatioBox mb-2 rounded"
+            style="background-image: url('./images/matt-zhou-unsplash.jpg')"
+          ></div> -->
+        </div>
+      </div>
+
+      <!-- Filler -->
+      <div class="d-xl-none filler"></div>
+    </div>
+
+    <div
+      class="aspectRatioBox mb-2 rounded position-relative"
+      style="background-image: url('./images/matt-zhou-unsplash.jpg')"
+    >
+      <div
+        class="position-absolute w-100 h-100 d-flex flex-column justify-content-center align-items-center overlay"
+      >
+        <span class="text-white">Show all experiences &gt;</span>
+      </div>
+    </div>
+
+    <div class="mt-3 py-4 py-lg-5 headings callToAction">
+      <h4 class="mb-0 mb-md-1">When are you traveling?</h4>
+      <p class="font-weight-light">
+        Add dates for updated pricing and availability.
+      </p>
+      <button class="btn btn-success px-4">Add dates</button>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
