--- a/web-basic/airbnb/demo.html
+++ b/web-basic/airbnb/demo.html
@@ -167,7 +167,7 @@
 
     <div class="container-fluid">
       <!-- First Section -->
-      <div class="pt-3 pt-lg-4 pt-xl-5 headings headings">
+      <div class="pt-3 pt-lg-4 pt-xl-5 headings">
         <h4 class="mb-3">
           What guests are saying about homes in United States
         </h4>
@@ -334,8 +334,8 @@
 
     <hr class="mt-2 mt-md-3 mb-0" />
     <!-- Home Listings -->
-    <div class="pt-4 pt-lg-5 headings">
-      <h4 class="mb-3">Homes in United States</h4>
+    <div class="pt-4 pt-lg-5 pt-xl-6 headings">
+      <h4 class="mb-3 ml-5">Homes in United States</h4>
     </div>
 
     <div class="row flex-nowrap pt-2 scrollableRow no-gutters">
@@ -469,12 +469,12 @@
       <div class="d-xl-none filler"></div>
     </div>
 
-    <div class="mt-3 d-none d-md-block">
+    <div class="mt-3 ml-5 d-none d-md-block">
       <a href="#" class="listingsLink">Show all (22,000+) &gt;</a>
     </div>
 
     <div class="pt-4 pt-lg-5 headings">
-      <h4 class="mb-3">Top-rated experiences</h4>
+      <h4 class="mb-3 ml-5">Top-rated experiences</h4>
     </div>
 
     <div class="row flex-nowrap pt-2 scrollableRow no-gutters">
@@ -555,12 +555,17 @@
       </div>
       <div class="col-8 col-md-6 col-xl-3">
         <div class="listing">
-          <img class="img-fluid w-100 rounded" src="./images/outdoor2-2.jpg" />
-
-          <!-- <div
-            class="aspectRatioBox mb-2 rounded"
-            style="background-image: url('./images/matt-zhou-unsplash.jpg')"
-          ></div> -->
+          <div id="piccc" class="aspectRatioBox mb-2 rounded position-relative">
+            <div
+              class="position-absolute w-100 h-100 d-flex flex-column justify-content-center align-items-center overlay"
+            >
+              <span class="text-white"
+                ><a href="#" class="text-white"
+                  >Show all experiences &gt;</a
+                ></span
+              >
+            </div>
+          </div>
         </div>
       </div>
 
@@ -568,19 +573,8 @@
       <div class="d-xl-none filler"></div>
     </div>
 
-    <div
-      class="aspectRatioBox mb-2 rounded position-relative"
-      style="background-image: url('./images/matt-zhou-unsplash.jpg')"
-    >
-      <div
-        class="position-absolute w-100 h-100 d-flex flex-column justify-content-center align-items-center overlay"
-      >
-        <span class="text-white">Show all experiences &gt;</span>
-      </div>
-    </div>
-
-    <div class="mt-3 py-4 py-lg-5 headings callToAction">
-      <h4 class="mb-0 mb-md-1">When are you traveling?</h4>
+    <div class="mt-3 ml-5 py-4 py-lg-5 headings callToAction">
+      <h4 class="mb-0 mb-md-1 ">When are you traveling?</h4>
       <p class="font-weight-light">
         Add dates for updated pricing and availability.
       </p>
