fifth part finished

--- a/web-basic/airbnb/demo.html
+++ b/web-basic/airbnb/demo.html
@@ -569,6 +569,21 @@
         </div>
       </div>
 
+      <!-- <div class="col-8 col-md-6 col-xl-3">
+        <div class="listing">
+          <div
+            class="aspectRatioBox mb-2 rounded position-relative"
+            style="background-image: url(./images/outdoor2-2.jpg)"
+          >
+            <div
+              class="position-absolute w-100 h-100 d-flex flex-column justify-content-center align-items-center overlay"
+            >
+              <span class="text-white">Show all experiences &gt;</span>
+            </div>
+          </div>
+        </div>
+      </div> -->
+
       <!-- Filler -->
       <div class="d-xl-none filler"></div>
     </div>
@@ -580,6 +595,104 @@
       </p>
       <button class="btn btn-success px-4">Add dates</button>
     </div>
+
+    <footer class="container-fluid">
+      <!-- Footer -->
+      <div class="row pt-5 d-none d-md-flex footerNav">
+        <div class="col-3">
+          <h5 class="mb-3">Airbnb</h5>
+          <ul class="list-unstyled mb-1">
+            <li><a href="#" class="text-secondary">Careers</a></li>
+            <li><a href="#" class="text-secondary">Press</a></li>
+            <li><a href="#" class="text-secondary">Policies</a></li>
+            <li><a href="#" class="text-secondary">Help</a></li>
+            <li>
+              <a href="#" class="text-secondary">Diversity & Belonging</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-3">
+          <h5 class="mb-3">Discover</h5>
+          <ul class="list-unstyled mb-1">
+            <li><a href="#" class="text-secondary">Trust & Safety</a></li>
+            <li><a href="#" class="text-secondary">Travel Credit</a></li>
+            <li><a href="#" class="text-secondary">Gift Cards</a></li>
+            <li><a href="#" class="text-secondary">Airbnb Citizen</a></li>
+            <li><a href="#" class="text-secondary">Business Travel</a></li>
+            <li><a href="#" class="text-secondary">Guidebooks</a></li>
+            <li><a href="#" class="text-secondary">Airbnbmag</a></li>
+            <li>
+              <a href="#" class="text-secondary"
+                >Events<span
+                  class="ml-1 badge badge-secondary font-weight-light p-1"
+                  >New</span
+                ></a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col-3">
+          <h5 class="mb-3">Hosting</h5>
+          <ul class="list-unstyled mb-1">
+            <li><a href="#" class="text-secondary">Why Host</a></li>
+            <li><a href="#" class="text-secondary">Hospitality</a></li>
+            <li><a href="#" class="text-secondary">Responsible Hosting</a></li>
+            <li><a href="#" class="text-secondary">Community Center</a></li>
+            <li>
+              <a href="#" class="text-secondary"
+                >Host an Experience<span
+                  class="ml-1 badge badge-secondary font-weight-light p-1"
+                  >New</span
+                ></a
+              >
+            </li>
+            <li>
+              <a href="#" class="text-secondary"
+                >Open Homes<span
+                  class="ml-1 badge badge-secondary font-weight-light p-1"
+                  >New</span
+                ></a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col-3">
+          <h5 class="mb-3 social">
+            <i class="text-secondary mr-3 fab fa-facebook-f"></i>
+            <i class="text-secondary mr-3 fab fa-twitter"></i>
+            <i class="text-secondary fab fa-instagram"></i>
+          </h5>
+          <ul class="list-unstyled mb-1">
+            <li><a href="#" class="text-secondary">Terms</a></li>
+            <li><a href="#" class="text-secondary">Privacy</a></li>
+            <li><a href="#" class="text-secondary">Site Map</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <hr class="d-none d-md-block" />
+
+      <div
+        class="row justify-content-between align-items-center mb-4 mb-md-5 mt-5 mt-md-0 footerBar"
+      >
+        <div class="col-auto">
+          <small class="text-secondary">© Airbnb, Inc.</small>
+        </div>
+        <div class="col-auto">
+          <button class="btn btn-link px-1 text-dark select">
+            <small
+              >English
+              <span class="pl-1 angle d-inline-block">&gt;</span></small
+            >
+          </button>
+          <button class="btn btn-link px-1 text-dark select">
+            <small
+              >USD <span class="pl-1 angle d-inline-block">&gt;</span></small
+            >
+          </button>
+        </div>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
